Add Register And Log in User withFirebase
Add the Google Map API, Add the Location
Screen to the Tower

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="yellow_crane_tower_Description">The Yellow Crane Tower rises over Wuhan, a timeless sentinel, watching the Yangtze flow beneath golden eaves.</string>
     <string name="wuhan_university_sakura">Wuhan University Sakura</string>
     <string name="wuhan_university_sakura_Description">At Wuhan University, cherry blossoms bloom like delicate pink clouds, weaving a fleeting dream of spring across the ancient campus.</string>
+    <string name="YellowCraneTowerIntroduction">The Yellow Crane Tower, perched on Snake Hill in Wuhan, is a historic and poetic landmark with over a thousand years of history. Its graceful design, featuring upturned eaves and intricate carvings, resembles a crane ready to take flight. Celebrated in classical Chinese poetry, the tower offers stunning views of the Yangtze River, inspiring awe in all who visit. A symbol of cultural heritage, the Yellow Crane Tower elegantly connects the past and present.</string>
 </resources>
