--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="wuhan_university_sakura">Wuhan University Sakura</string>
     <string name="wuhan_university_sakura_Description">At Wuhan University, cherry blossoms bloom like delicate pink clouds, weaving a fleeting dream of spring across the ancient campus.</string>
     <string name="YellowCraneTowerIntroduction">The Yellow Crane Tower, perched on Snake Hill in Wuhan, is a historic and poetic landmark with over a thousand years of history. Its graceful design, featuring upturned eaves and intricate carvings, resembles a crane ready to take flight. Celebrated in classical Chinese poetry, the tower offers stunning views of the Yangtze River, inspiring awe in all who visit. A symbol of cultural heritage, the Yellow Crane Tower elegantly connects the past and present.</string>
+    <string name="HotDryNoodles">Wuhan Hot Dry Noodles is a classic street food from Wuhan, China. Made with alkaline wheat noodles, it’s mixed with sesame paste, soy sauce, garlic, and chili oil, then topped with pickled radish and green onions. The noodles have a firm, chewy texture with a rich, nutty, and mildly spicy flavor.</string>
 </resources>
